import { BigNumber as BN } from 'ethers';
import type Vi from 'vitest';

import fakePrimeContractResponses from '__mocks__/contracts/prime';
import fakeAccountAddress, { altAddress } from '__mocks__/models/address';
import fakeProvider from '__mocks__/models/provider';
import tokens, { xvs } from '__mocks__/models/tokens';

import { getIsolatedPoolParticipantsCount } from 'clients/subgraph';
import { type UseIsFeatureEnabled, useIsFeatureEnabled } from 'hooks/useIsFeatureEnabled';
import {
  type Prime,
  getIsolatedPoolComptrollerContract,
  getRewardsDistributorContract,
} from 'libs/contracts';
import { ChainId } from 'types';

import getIsolatedPools from '..';
import {
  fakeIsolatedPoolComptrollerContract,
  fakeIsolatedPoolParticipantsCount,
  fakePoolLensContract,
  fakePoolRegistryContractAddress,
  fakeResilientOracleContract,
  fakeRewardsDistributorContract,
} from '../__testUtils__/fakeData';

vi.mock('libs/contracts');

const fakePrimeContract = {
  tokens: async () => fakePrimeContractResponses.tokens,
  MINIMUM_STAKED_XVS: async () => fakePrimeContractResponses.MINIMUM_STAKED_XVS,
  getAllMarkets: async () => fakePrimeContractResponses.getAllMarkets,
  estimateAPR: async () => fakePrimeContractResponses.estimateAPR,
  calculateAPR: async () => fakePrimeContractResponses.calculateAPR,
} as unknown as Prime;

describe('getIsolatedPools - Feature enabled: Prime', () => {
  beforeEach(() => {
    (useIsFeatureEnabled as Vi.Mock).mockImplementation(
      ({ name }: UseIsFeatureEnabled) => name === 'prime',
    );

    (getIsolatedPoolComptrollerContract as Vi.Mock).mockImplementation(
      () => fakeIsolatedPoolComptrollerContract,
    );

    (getRewardsDistributorContract as Vi.Mock).mockImplementation(
      () => fakeRewardsDistributorContract,
    );

    (getIsolatedPoolParticipantsCount as Vi.Mock).mockImplementation(
      () => fakeIsolatedPoolParticipantsCount,
    );
  });

  it('fetches and formats Prime distributions and Prime distribution simulations if user is Prime', async () => {
    const response = await getIsolatedPools({
      chainId: ChainId.BSC_TESTNET,
      xvs,
      blocksPerDay: 28800,
      tokens,
      accountAddress: fakeAccountAddress,
      provider: fakeProvider,
      poolRegistryContractAddress: fakePoolRegistryContractAddress,
      poolLensContract: fakePoolLensContract,
      resilientOracleContract: fakeResilientOracleContract,
      primeContract: fakePrimeContract,
      vTreasuryContractAddress: altAddress,
    });

    expect(response).toMatchSnapshot();
  });

  it('does not fetch Prime distributions if user is not Prime', async () => {
    const customFakePrimeContract = {
      ...fakePrimeContract,
      tokens: async () => ({
        ...fakePrimeContractResponses.tokens,
        exists: false,
      }),
    } as unknown as Prime;

    const response = await getIsolatedPools({
      chainId: ChainId.BSC_TESTNET,
      xvs,
      blocksPerDay: 28800,
      tokens,
      accountAddress: fakeAccountAddress,
      provider: fakeProvider,
      poolRegistryContractAddress: fakePoolRegistryContractAddress,
      poolLensContract: fakePoolLensContract,
      resilientOracleContract: fakeResilientOracleContract,
      primeContract: customFakePrimeContract,
      vTreasuryContractAddress: altAddress,
    });

    expect(response).toMatchSnapshot();
  });

  it('filters out Prime distributions and simulations that are 0', async () => {
    const customFakePrimeContract = {
      ...fakePrimeContract,
      estimateAPR: async () => ({
        borrowAPR: BN.from(0),
        supplyAPR: BN.from(0),
      }),
      calculateAPR: async () => ({
        borrowAPR: BN.from(0),
        supplyAPR: BN.from(0),
      }),
    } as unknown as Prime;

    const response = await getIsolatedPools({
      chainId: ChainId.BSC_TESTNET,
      xvs,
      blocksPerDay: 28800,
      tokens,
      accountAddress: fakeAccountAddress,
      provider: fakeProvider,
      poolRegistryContractAddress: fakePoolRegistryContractAddress,
      poolLensContract: fakePoolLensContract,
      resilientOracleContract: fakeResilientOracleContract,
      primeContract: customFakePrimeContract,
      vTreasuryContractAddress: altAddress,
    });

    expect(response).toMatchSnapshot();
  });
});
