// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getIsolatedPools - Feature enabled: Prime > does not fetch Prime distributions if user is not Prime 1`] = `
{
  "pools": [
    {
      "assets": [
        {
          "borrowApyPercentage": "3.0457256612776096",
          "borrowBalanceCents": "10266.891765447722",
          "borrowBalanceTokens": "102.672734",
          "borrowCapTokens": "14880000",
          "borrowDistributions": [
            {
              "apyPercentage": "0",
              "dailyDistributedTokens": "0",
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "rewardDistributor",
            },
          ],
          "borrowerCount": 20,
          "cashTokens": "2649291.731707",
          "collateralFactor": 0.8,
          "disabledTokenActions": [],
          "exchangeRateVTokens": "0.99999847176819609601",
          "isCollateralOfUser": false,
          "liquidityCents": "264919325.753333245081",
          "reserveFactor": 0.1,
          "reserveTokens": "0",
          "supplierCount": 10,
          "supplyApyPercentage": "0.000104647012366676",
          "supplyBalanceCents": "264929592.64509868800383953542527752",
          "supplyBalanceTokens": "2649394.40444099995200661144",
          "supplyCapTokens": "18600000",
          "supplyDistributions": [
            {
              "apyPercentage": "0",
              "dailyDistributedTokens": "0",
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "rewardDistributor",
            },
          ],
          "tokenPriceCents": "99.996283",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "999962830000000",
          "userWalletBalanceTokens": "10000000000000",
          "vToken": {
            "address": "0x80CC30811e362aC9aB857C3d7875CbcCc0b65750",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/libs/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x23a73971A6B9f6580c048B9CB188869B2A2aA2aD",
      "description": "",
      "isIsolated": true,
      "name": "DeFi",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
    {
      "assets": [
        {
          "borrowApyPercentage": "4.003672121275481",
          "borrowBalanceCents": "1032129.557718287222",
          "borrowBalanceTokens": "10321.679234",
          "borrowCapTokens": "14880000",
          "borrowDistributions": [],
          "borrowerCount": 20,
          "cashTokens": "101166.023761",
          "collateralFactor": 0.8,
          "disabledTokenActions": [],
          "exchangeRateVTokens": "0.997398625122774492",
          "isCollateralOfUser": false,
          "liquidityCents": "10116226.341989680363",
          "reserveFactor": 0.1,
          "reserveTokens": "0.000131",
          "supplierCount": 10,
          "supplyApyPercentage": "0.32764541346423925",
          "supplyBalanceCents": "11148355.88660845370158439626770976",
          "supplyBalanceTokens": "111487.70286399999189554272",
          "supplyCapTokens": "18600000",
          "supplyDistributions": [],
          "tokenPriceCents": "99.996283",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "999962830000000",
          "userWalletBalanceTokens": "10000000000000",
          "vToken": {
            "address": "0x0bFE4e0B8A2a096A27e5B18b078d25be57C08634",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/libs/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x1F4f0989C51f12DAcacD4025018176711f3Bf289",
      "description": "",
      "isIsolated": true,
      "name": "GameFi",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
    {
      "assets": [
        {
          "borrowApyPercentage": "3.045326359470546",
          "borrowBalanceCents": "0.000399985132",
          "borrowBalanceTokens": "0.000004",
          "borrowCapTokens": "14880000",
          "borrowDistributions": [
            {
              "apyPercentage": "0",
              "dailyDistributedTokens": "0",
              "token": {
                "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
                "asset": "/src/libs/tokens/img/lisUSD.png",
                "decimals": 18,
                "symbol": "lisUSD",
              },
              "type": "rewardDistributor",
            },
            {
              "apyPercentage": "0.20019958435848473",
              "referenceValues": {
                "userBorrowBalanceTokens": "2e-7",
                "userSupplyBalanceTokens": "1103100.00000039991050000018",
                "userXvsStakedTokens": "1000",
              },
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "primeSimulation",
            },
          ],
          "borrowerCount": 20,
          "cashTokens": "11031000",
          "collateralFactor": 0.8,
          "disabledTokenActions": [],
          "exchangeRateVTokens": "0.999999999999545",
          "isCollateralOfUser": false,
          "liquidityCents": "1103058997.773",
          "reserveFactor": 0.1,
          "reserveTokens": "0",
          "supplierCount": 10,
          "supplyApyPercentage": "0",
          "supplyBalanceCents": "1103058997.77339989563532689599327223",
          "supplyBalanceTokens": "11031000.00000399910500000181",
          "supplyCapTokens": "18600000",
          "supplyDistributions": [
            {
              "apyPercentage": "0",
              "dailyDistributedTokens": "0",
              "token": {
                "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
                "asset": "/src/libs/tokens/img/lisUSD.png",
                "decimals": 18,
                "symbol": "lisUSD",
              },
              "type": "rewardDistributor",
            },
            {
              "apyPercentage": "0.23026397657694986",
              "referenceValues": {
                "userBorrowBalanceTokens": "2e-7",
                "userSupplyBalanceTokens": "1103100.00000039991050000018",
                "userXvsStakedTokens": "1000",
              },
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "primeSimulation",
            },
          ],
          "tokenPriceCents": "99.996283",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "999962830000000",
          "userWalletBalanceTokens": "10000000000000",
          "vToken": {
            "address": "0x2197d02cC9cd1ad51317A0a85A656a0c82383A7c",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/libs/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
        {
          "borrowApyPercentage": "399.5548791715505",
          "borrowBalanceCents": "14020.2378315565440147153504",
          "borrowBalanceTokens": "0.267025220823379366",
          "borrowCapTokens": "56000",
          "borrowDistributions": [
            {
              "apyPercentage": "0",
              "dailyDistributedTokens": "0",
              "token": {
                "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
                "asset": "/src/libs/tokens/img/lisUSD.png",
                "decimals": 18,
                "symbol": "lisUSD",
              },
              "type": "rewardDistributor",
            },
          ],
          "borrowerCount": 20,
          "cashTokens": "0.000705300034659891",
          "collateralFactor": 0.45,
          "disabledTokenActions": [],
          "exchangeRateVTokens": "0.856077892298015039",
          "isCollateralOfUser": false,
          "liquidityCents": "37.0319859601477808269104",
          "reserveFactor": 0.25,
          "reserveTokens": "0",
          "supplierCount": 10,
          "supplyApyPercentage": "233.30903562118922",
          "supplyBalanceCents": "14057.269817516691795017207856",
          "supplyBalanceTokens": "0.26773052085803925699",
          "supplyCapTokens": "80000",
          "supplyDistributions": [
            {
              "apyPercentage": "0",
              "dailyDistributedTokens": "0",
              "token": {
                "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
                "asset": "/src/libs/tokens/img/lisUSD.png",
                "decimals": 18,
                "symbol": "lisUSD",
              },
              "type": "rewardDistributor",
            },
          ],
          "tokenPriceCents": "52505.2944",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "525052.944",
          "userWalletBalanceTokens": "10",
          "vToken": {
            "address": "0x231dED0Dfc99634e52EE1a1329586bc970d773b3",
            "decimals": 8,
            "symbol": "vWBNB",
            "underlyingToken": {
              "address": "0xae13d989daC2f0dEbFf460aC112a837C89BAa7cd",
              "asset": "/src/libs/tokens/img/wbnb.svg",
              "decimals": 18,
              "symbol": "WBNB",
            },
          },
        },
      ],
      "comptrollerAddress": "0x596B11acAACF03217287939f88d63b51d3771704",
      "description": "",
      "isIsolated": true,
      "name": "Liquid Staked BNB",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
    {
      "assets": [
        {
          "borrowApyPercentage": "0.011647930409597329",
          "borrowBalanceCents": "399.985132",
          "borrowBalanceTokens": "4",
          "borrowCapTokens": "900000",
          "borrowDistributions": [],
          "borrowerCount": 0,
          "cashTokens": "6006",
          "collateralFactor": 0.75,
          "disabledTokenActions": [],
          "exchangeRateVTokens": "1",
          "isCollateralOfUser": false,
          "liquidityCents": "600577.675698",
          "reserveFactor": 0.1,
          "reserveTokens": "0",
          "supplierCount": 0,
          "supplyApyPercentage": "0.000006975767097294",
          "supplyBalanceCents": "600977.66083",
          "supplyBalanceTokens": "6010",
          "supplyCapTokens": "1000000",
          "supplyDistributions": [],
          "tokenPriceCents": "99.996283",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "999962830000000",
          "userWalletBalanceTokens": "10000000000000",
          "vToken": {
            "address": "0x3AF2bE7AbEF0f840b196D99d79F4B803a5dB14a1",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/libs/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x92e8E3C202093A495e98C10f9fcaa5Abe288F74A",
      "description": "",
      "isIsolated": true,
      "name": "Meme",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
    {
      "assets": [
        {
          "borrowApyPercentage": "5.130421804803698",
          "borrowBalanceCents": "1030091.4588649133175062",
          "borrowBalanceTokens": "10300.914588649133175062",
          "borrowCapTokens": "200000",
          "borrowDistributions": [],
          "borrowerCount": 20,
          "cashTokens": "32569.640339677929523638",
          "collateralFactor": 0.65,
          "disabledTokenActions": [],
          "exchangeRateVTokens": "0.9930076443898276885",
          "isCollateralOfUser": false,
          "liquidityCents": "3256964.0339677929523638",
          "reserveFactor": 0.2,
          "reserveTokens": "0.000166728600388574",
          "supplierCount": 10,
          "supplyApyPercentage": "0.966416714921392",
          "supplyBalanceCents": "4287055.476159846231009819",
          "supplyBalanceTokens": "42870.55476159846231009819",
          "supplyCapTokens": "500000",
          "supplyDistributions": [],
          "tokenPriceCents": "100",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "1000",
          "userWalletBalanceTokens": "10",
          "vToken": {
            "address": "0x170d3b2da05cc2124334240fB34ad1359e34C562",
            "decimals": 8,
            "symbol": "vlisUSD",
            "underlyingToken": {
              "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
              "asset": "/src/libs/tokens/img/lisUSD.png",
              "decimals": 18,
              "symbol": "lisUSD",
            },
          },
        },
        {
          "borrowApyPercentage": "2.028626199218375",
          "borrowBalanceCents": "100461.088822525373",
          "borrowBalanceTokens": "1004.648231",
          "borrowCapTokens": "400000",
          "borrowDistributions": [
            {
              "apyPercentage": "0",
              "dailyDistributedTokens": "0",
              "token": {
                "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
                "asset": "/src/libs/tokens/img/lisUSD.png",
                "decimals": 18,
                "symbol": "lisUSD",
              },
              "type": "rewardDistributor",
            },
            {
              "apyPercentage": "0.20019958435848473",
              "referenceValues": {
                "userBorrowBalanceTokens": "50.23241155",
                "userSupplyBalanceTokens": "99917.91834089999667918285",
                "userXvsStakedTokens": "1000",
              },
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "primeSimulation",
            },
          ],
          "borrowerCount": 20,
          "cashTokens": "998174.53518",
          "collateralFactor": 0.8,
          "disabledTokenActions": [],
          "exchangeRateVTokens": "0.99998934225265418908",
          "isCollateralOfUser": false,
          "liquidityCents": "99813743.30325273594",
          "reserveFactor": 0.1,
          "reserveTokens": "0.000002",
          "supplierCount": 10,
          "supplyApyPercentage": "0.001817450869823211",
          "supplyBalanceCents": "99914204.39187526542630629377313097",
          "supplyBalanceTokens": "999179.18340899996679182859",
          "supplyCapTokens": "1000000",
          "supplyDistributions": [
            {
              "apyPercentage": "0",
              "dailyDistributedTokens": "0",
              "token": {
                "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
                "asset": "/src/libs/tokens/img/lisUSD.png",
                "decimals": 18,
                "symbol": "lisUSD",
              },
              "type": "rewardDistributor",
            },
            {
              "apyPercentage": "0.23026397657694986",
              "referenceValues": {
                "userBorrowBalanceTokens": "50.23241155",
                "userSupplyBalanceTokens": "99917.91834089999667918285",
                "userXvsStakedTokens": "1000",
              },
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "primeSimulation",
            },
          ],
          "tokenPriceCents": "99.996283",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "999962830000000",
          "userWalletBalanceTokens": "10000000000000",
          "vToken": {
            "address": "0x3338988d0beb4419Acb8fE624218754053362D06",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/libs/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x10b57706AD2345e590c2eA4DC02faef0d9f5b08B",
      "description": "",
      "isIsolated": true,
      "name": "Stablecoins",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
    {
      "assets": [
        {
          "borrowApyPercentage": "3.045326359470546",
          "borrowBalanceCents": "0",
          "borrowBalanceTokens": "0",
          "borrowCapTokens": "14880000",
          "borrowDistributions": [
            {
              "apyPercentage": "0.20019958435848473",
              "referenceValues": {
                "userBorrowBalanceTokens": "0",
                "userSupplyBalanceTokens": "1000",
                "userXvsStakedTokens": "1000",
              },
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "primeSimulation",
            },
          ],
          "borrowerCount": 20,
          "cashTokens": "10000",
          "collateralFactor": 0.8,
          "disabledTokenActions": [],
          "exchangeRateVTokens": "1",
          "isCollateralOfUser": false,
          "liquidityCents": "999962.83",
          "reserveFactor": 0.1,
          "reserveTokens": "0",
          "supplierCount": 10,
          "supplyApyPercentage": "0",
          "supplyBalanceCents": "999962.83",
          "supplyBalanceTokens": "10000",
          "supplyCapTokens": "18600000",
          "supplyDistributions": [
            {
              "apyPercentage": "0.23026397657694986",
              "referenceValues": {
                "userBorrowBalanceTokens": "0",
                "userSupplyBalanceTokens": "1000",
                "userXvsStakedTokens": "1000",
              },
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "primeSimulation",
            },
          ],
          "tokenPriceCents": "99.996283",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "999962830000000",
          "userWalletBalanceTokens": "10000000000000",
          "vToken": {
            "address": "0x712774CBFFCBD60e9825871CcEFF2F917442b2c3",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/libs/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x11537D023f489E4EF0C7157cc729C7B69CbE0c97",
      "description": "",
      "isIsolated": true,
      "name": "Tron",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
  ],
}
`;

exports[`getIsolatedPools - Feature enabled: Prime > fetches and formats Prime distributions and Prime distribution simulations if user is Prime 1`] = `
{
  "pools": [
    {
      "assets": [
        {
          "borrowApyPercentage": "3.0457256612776096",
          "borrowBalanceCents": "10266.891765447722",
          "borrowBalanceTokens": "102.672734",
          "borrowCapTokens": "14880000",
          "borrowDistributions": [
            {
              "apyPercentage": "0",
              "dailyDistributedTokens": "0",
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "rewardDistributor",
            },
          ],
          "borrowerCount": 20,
          "cashTokens": "2649291.731707",
          "collateralFactor": 0.8,
          "disabledTokenActions": [],
          "exchangeRateVTokens": "0.99999847176819609601",
          "isCollateralOfUser": false,
          "liquidityCents": "264919325.753333245081",
          "reserveFactor": 0.1,
          "reserveTokens": "0",
          "supplierCount": 10,
          "supplyApyPercentage": "0.000104647012366676",
          "supplyBalanceCents": "264929592.64509868800383953542527752",
          "supplyBalanceTokens": "2649394.40444099995200661144",
          "supplyCapTokens": "18600000",
          "supplyDistributions": [
            {
              "apyPercentage": "0",
              "dailyDistributedTokens": "0",
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "rewardDistributor",
            },
          ],
          "tokenPriceCents": "99.996283",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "999962830000000",
          "userWalletBalanceTokens": "10000000000000",
          "vToken": {
            "address": "0x80CC30811e362aC9aB857C3d7875CbcCc0b65750",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/libs/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x23a73971A6B9f6580c048B9CB188869B2A2aA2aD",
      "description": "",
      "isIsolated": true,
      "name": "DeFi",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
    {
      "assets": [
        {
          "borrowApyPercentage": "4.003672121275481",
          "borrowBalanceCents": "1032129.557718287222",
          "borrowBalanceTokens": "10321.679234",
          "borrowCapTokens": "14880000",
          "borrowDistributions": [],
          "borrowerCount": 20,
          "cashTokens": "101166.023761",
          "collateralFactor": 0.8,
          "disabledTokenActions": [],
          "exchangeRateVTokens": "0.997398625122774492",
          "isCollateralOfUser": false,
          "liquidityCents": "10116226.341989680363",
          "reserveFactor": 0.1,
          "reserveTokens": "0.000131",
          "supplierCount": 10,
          "supplyApyPercentage": "0.32764541346423925",
          "supplyBalanceCents": "11148355.88660845370158439626770976",
          "supplyBalanceTokens": "111487.70286399999189554272",
          "supplyCapTokens": "18600000",
          "supplyDistributions": [],
          "tokenPriceCents": "99.996283",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "999962830000000",
          "userWalletBalanceTokens": "10000000000000",
          "vToken": {
            "address": "0x0bFE4e0B8A2a096A27e5B18b078d25be57C08634",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/libs/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x1F4f0989C51f12DAcacD4025018176711f3Bf289",
      "description": "",
      "isIsolated": true,
      "name": "GameFi",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
    {
      "assets": [
        {
          "borrowApyPercentage": "3.045326359470546",
          "borrowBalanceCents": "0.000399985132",
          "borrowBalanceTokens": "0.000004",
          "borrowCapTokens": "14880000",
          "borrowDistributions": [
            {
              "apyPercentage": "0",
              "dailyDistributedTokens": "0",
              "token": {
                "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
                "asset": "/src/libs/tokens/img/lisUSD.png",
                "decimals": 18,
                "symbol": "lisUSD",
              },
              "type": "rewardDistributor",
            },
            {
              "apyPercentage": "0.32051113933926345",
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "prime",
            },
            {
              "apyPercentage": "0.20019958435848473",
              "referenceValues": {
                "userBorrowBalanceTokens": "2e-7",
                "userSupplyBalanceTokens": "1103100.00000039991050000018",
                "userXvsStakedTokens": "1000",
              },
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "primeSimulation",
            },
          ],
          "borrowerCount": 20,
          "cashTokens": "11031000",
          "collateralFactor": 0.8,
          "disabledTokenActions": [],
          "exchangeRateVTokens": "0.999999999999545",
          "isCollateralOfUser": false,
          "liquidityCents": "1103058997.773",
          "reserveFactor": 0.1,
          "reserveTokens": "0",
          "supplierCount": 10,
          "supplyApyPercentage": "0",
          "supplyBalanceCents": "1103058997.77339989563532689599327223",
          "supplyBalanceTokens": "11031000.00000399910500000181",
          "supplyCapTokens": "18600000",
          "supplyDistributions": [
            {
              "apyPercentage": "0",
              "dailyDistributedTokens": "0",
              "token": {
                "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
                "asset": "/src/libs/tokens/img/lisUSD.png",
                "decimals": 18,
                "symbol": "lisUSD",
              },
              "type": "rewardDistributor",
            },
            {
              "apyPercentage": "0.2904197513866391",
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "prime",
            },
            {
              "apyPercentage": "0.23026397657694986",
              "referenceValues": {
                "userBorrowBalanceTokens": "2e-7",
                "userSupplyBalanceTokens": "1103100.00000039991050000018",
                "userXvsStakedTokens": "1000",
              },
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "primeSimulation",
            },
          ],
          "tokenPriceCents": "99.996283",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "999962830000000",
          "userWalletBalanceTokens": "10000000000000",
          "vToken": {
            "address": "0x2197d02cC9cd1ad51317A0a85A656a0c82383A7c",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/libs/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
        {
          "borrowApyPercentage": "399.5548791715505",
          "borrowBalanceCents": "14020.2378315565440147153504",
          "borrowBalanceTokens": "0.267025220823379366",
          "borrowCapTokens": "56000",
          "borrowDistributions": [
            {
              "apyPercentage": "0",
              "dailyDistributedTokens": "0",
              "token": {
                "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
                "asset": "/src/libs/tokens/img/lisUSD.png",
                "decimals": 18,
                "symbol": "lisUSD",
              },
              "type": "rewardDistributor",
            },
          ],
          "borrowerCount": 20,
          "cashTokens": "0.000705300034659891",
          "collateralFactor": 0.45,
          "disabledTokenActions": [],
          "exchangeRateVTokens": "0.856077892298015039",
          "isCollateralOfUser": false,
          "liquidityCents": "37.0319859601477808269104",
          "reserveFactor": 0.25,
          "reserveTokens": "0",
          "supplierCount": 10,
          "supplyApyPercentage": "233.30903562118922",
          "supplyBalanceCents": "14057.269817516691795017207856",
          "supplyBalanceTokens": "0.26773052085803925699",
          "supplyCapTokens": "80000",
          "supplyDistributions": [
            {
              "apyPercentage": "0",
              "dailyDistributedTokens": "0",
              "token": {
                "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
                "asset": "/src/libs/tokens/img/lisUSD.png",
                "decimals": 18,
                "symbol": "lisUSD",
              },
              "type": "rewardDistributor",
            },
          ],
          "tokenPriceCents": "52505.2944",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "525052.944",
          "userWalletBalanceTokens": "10",
          "vToken": {
            "address": "0x231dED0Dfc99634e52EE1a1329586bc970d773b3",
            "decimals": 8,
            "symbol": "vWBNB",
            "underlyingToken": {
              "address": "0xae13d989daC2f0dEbFf460aC112a837C89BAa7cd",
              "asset": "/src/libs/tokens/img/wbnb.svg",
              "decimals": 18,
              "symbol": "WBNB",
            },
          },
        },
      ],
      "comptrollerAddress": "0x596B11acAACF03217287939f88d63b51d3771704",
      "description": "",
      "isIsolated": true,
      "name": "Liquid Staked BNB",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
    {
      "assets": [
        {
          "borrowApyPercentage": "0.011647930409597329",
          "borrowBalanceCents": "399.985132",
          "borrowBalanceTokens": "4",
          "borrowCapTokens": "900000",
          "borrowDistributions": [],
          "borrowerCount": 0,
          "cashTokens": "6006",
          "collateralFactor": 0.75,
          "disabledTokenActions": [],
          "exchangeRateVTokens": "1",
          "isCollateralOfUser": false,
          "liquidityCents": "600577.675698",
          "reserveFactor": 0.1,
          "reserveTokens": "0",
          "supplierCount": 0,
          "supplyApyPercentage": "0.000006975767097294",
          "supplyBalanceCents": "600977.66083",
          "supplyBalanceTokens": "6010",
          "supplyCapTokens": "1000000",
          "supplyDistributions": [],
          "tokenPriceCents": "99.996283",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "999962830000000",
          "userWalletBalanceTokens": "10000000000000",
          "vToken": {
            "address": "0x3AF2bE7AbEF0f840b196D99d79F4B803a5dB14a1",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/libs/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x92e8E3C202093A495e98C10f9fcaa5Abe288F74A",
      "description": "",
      "isIsolated": true,
      "name": "Meme",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
    {
      "assets": [
        {
          "borrowApyPercentage": "5.130421804803698",
          "borrowBalanceCents": "1030091.4588649133175062",
          "borrowBalanceTokens": "10300.914588649133175062",
          "borrowCapTokens": "200000",
          "borrowDistributions": [],
          "borrowerCount": 20,
          "cashTokens": "32569.640339677929523638",
          "collateralFactor": 0.65,
          "disabledTokenActions": [],
          "exchangeRateVTokens": "0.9930076443898276885",
          "isCollateralOfUser": false,
          "liquidityCents": "3256964.0339677929523638",
          "reserveFactor": 0.2,
          "reserveTokens": "0.000166728600388574",
          "supplierCount": 10,
          "supplyApyPercentage": "0.966416714921392",
          "supplyBalanceCents": "4287055.476159846231009819",
          "supplyBalanceTokens": "42870.55476159846231009819",
          "supplyCapTokens": "500000",
          "supplyDistributions": [],
          "tokenPriceCents": "100",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "1000",
          "userWalletBalanceTokens": "10",
          "vToken": {
            "address": "0x170d3b2da05cc2124334240fB34ad1359e34C562",
            "decimals": 8,
            "symbol": "vlisUSD",
            "underlyingToken": {
              "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
              "asset": "/src/libs/tokens/img/lisUSD.png",
              "decimals": 18,
              "symbol": "lisUSD",
            },
          },
        },
        {
          "borrowApyPercentage": "2.028626199218375",
          "borrowBalanceCents": "100461.088822525373",
          "borrowBalanceTokens": "1004.648231",
          "borrowCapTokens": "400000",
          "borrowDistributions": [
            {
              "apyPercentage": "0",
              "dailyDistributedTokens": "0",
              "token": {
                "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
                "asset": "/src/libs/tokens/img/lisUSD.png",
                "decimals": 18,
                "symbol": "lisUSD",
              },
              "type": "rewardDistributor",
            },
            {
              "apyPercentage": "0.32051113933926345",
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "prime",
            },
            {
              "apyPercentage": "0.20019958435848473",
              "referenceValues": {
                "userBorrowBalanceTokens": "50.23241155",
                "userSupplyBalanceTokens": "99917.91834089999667918285",
                "userXvsStakedTokens": "1000",
              },
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "primeSimulation",
            },
          ],
          "borrowerCount": 20,
          "cashTokens": "998174.53518",
          "collateralFactor": 0.8,
          "disabledTokenActions": [],
          "exchangeRateVTokens": "0.99998934225265418908",
          "isCollateralOfUser": false,
          "liquidityCents": "99813743.30325273594",
          "reserveFactor": 0.1,
          "reserveTokens": "0.000002",
          "supplierCount": 10,
          "supplyApyPercentage": "0.001817450869823211",
          "supplyBalanceCents": "99914204.39187526542630629377313097",
          "supplyBalanceTokens": "999179.18340899996679182859",
          "supplyCapTokens": "1000000",
          "supplyDistributions": [
            {
              "apyPercentage": "0",
              "dailyDistributedTokens": "0",
              "token": {
                "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
                "asset": "/src/libs/tokens/img/lisUSD.png",
                "decimals": 18,
                "symbol": "lisUSD",
              },
              "type": "rewardDistributor",
            },
            {
              "apyPercentage": "0.2904197513866391",
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "prime",
            },
            {
              "apyPercentage": "0.23026397657694986",
              "referenceValues": {
                "userBorrowBalanceTokens": "50.23241155",
                "userSupplyBalanceTokens": "99917.91834089999667918285",
                "userXvsStakedTokens": "1000",
              },
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "primeSimulation",
            },
          ],
          "tokenPriceCents": "99.996283",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "999962830000000",
          "userWalletBalanceTokens": "10000000000000",
          "vToken": {
            "address": "0x3338988d0beb4419Acb8fE624218754053362D06",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/libs/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x10b57706AD2345e590c2eA4DC02faef0d9f5b08B",
      "description": "",
      "isIsolated": true,
      "name": "Stablecoins",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
    {
      "assets": [
        {
          "borrowApyPercentage": "3.045326359470546",
          "borrowBalanceCents": "0",
          "borrowBalanceTokens": "0",
          "borrowCapTokens": "14880000",
          "borrowDistributions": [
            {
              "apyPercentage": "0.32051113933926345",
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "prime",
            },
            {
              "apyPercentage": "0.20019958435848473",
              "referenceValues": {
                "userBorrowBalanceTokens": "0",
                "userSupplyBalanceTokens": "1000",
                "userXvsStakedTokens": "1000",
              },
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "primeSimulation",
            },
          ],
          "borrowerCount": 20,
          "cashTokens": "10000",
          "collateralFactor": 0.8,
          "disabledTokenActions": [],
          "exchangeRateVTokens": "1",
          "isCollateralOfUser": false,
          "liquidityCents": "999962.83",
          "reserveFactor": 0.1,
          "reserveTokens": "0",
          "supplierCount": 10,
          "supplyApyPercentage": "0",
          "supplyBalanceCents": "999962.83",
          "supplyBalanceTokens": "10000",
          "supplyCapTokens": "18600000",
          "supplyDistributions": [
            {
              "apyPercentage": "0.2904197513866391",
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "prime",
            },
            {
              "apyPercentage": "0.23026397657694986",
              "referenceValues": {
                "userBorrowBalanceTokens": "0",
                "userSupplyBalanceTokens": "1000",
                "userXvsStakedTokens": "1000",
              },
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "primeSimulation",
            },
          ],
          "tokenPriceCents": "99.996283",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "999962830000000",
          "userWalletBalanceTokens": "10000000000000",
          "vToken": {
            "address": "0x712774CBFFCBD60e9825871CcEFF2F917442b2c3",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/libs/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x11537D023f489E4EF0C7157cc729C7B69CbE0c97",
      "description": "",
      "isIsolated": true,
      "name": "Tron",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
  ],
}
`;

exports[`getIsolatedPools - Feature enabled: Prime > filters out Prime distributions and simulations that are 0 1`] = `
{
  "pools": [
    {
      "assets": [
        {
          "borrowApyPercentage": "3.0457256612776096",
          "borrowBalanceCents": "10266.891765447722",
          "borrowBalanceTokens": "102.672734",
          "borrowCapTokens": "14880000",
          "borrowDistributions": [
            {
              "apyPercentage": "0",
              "dailyDistributedTokens": "0",
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "rewardDistributor",
            },
          ],
          "borrowerCount": 20,
          "cashTokens": "2649291.731707",
          "collateralFactor": 0.8,
          "disabledTokenActions": [],
          "exchangeRateVTokens": "0.99999847176819609601",
          "isCollateralOfUser": false,
          "liquidityCents": "264919325.753333245081",
          "reserveFactor": 0.1,
          "reserveTokens": "0",
          "supplierCount": 10,
          "supplyApyPercentage": "0.000104647012366676",
          "supplyBalanceCents": "264929592.64509868800383953542527752",
          "supplyBalanceTokens": "2649394.40444099995200661144",
          "supplyCapTokens": "18600000",
          "supplyDistributions": [
            {
              "apyPercentage": "0",
              "dailyDistributedTokens": "0",
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "rewardDistributor",
            },
          ],
          "tokenPriceCents": "99.996283",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "999962830000000",
          "userWalletBalanceTokens": "10000000000000",
          "vToken": {
            "address": "0x80CC30811e362aC9aB857C3d7875CbcCc0b65750",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/libs/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x23a73971A6B9f6580c048B9CB188869B2A2aA2aD",
      "description": "",
      "isIsolated": true,
      "name": "DeFi",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
    {
      "assets": [
        {
          "borrowApyPercentage": "4.003672121275481",
          "borrowBalanceCents": "1032129.557718287222",
          "borrowBalanceTokens": "10321.679234",
          "borrowCapTokens": "14880000",
          "borrowDistributions": [],
          "borrowerCount": 20,
          "cashTokens": "101166.023761",
          "collateralFactor": 0.8,
          "disabledTokenActions": [],
          "exchangeRateVTokens": "0.997398625122774492",
          "isCollateralOfUser": false,
          "liquidityCents": "10116226.341989680363",
          "reserveFactor": 0.1,
          "reserveTokens": "0.000131",
          "supplierCount": 10,
          "supplyApyPercentage": "0.32764541346423925",
          "supplyBalanceCents": "11148355.88660845370158439626770976",
          "supplyBalanceTokens": "111487.70286399999189554272",
          "supplyCapTokens": "18600000",
          "supplyDistributions": [],
          "tokenPriceCents": "99.996283",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "999962830000000",
          "userWalletBalanceTokens": "10000000000000",
          "vToken": {
            "address": "0x0bFE4e0B8A2a096A27e5B18b078d25be57C08634",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/libs/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x1F4f0989C51f12DAcacD4025018176711f3Bf289",
      "description": "",
      "isIsolated": true,
      "name": "GameFi",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
    {
      "assets": [
        {
          "borrowApyPercentage": "3.045326359470546",
          "borrowBalanceCents": "0.000399985132",
          "borrowBalanceTokens": "0.000004",
          "borrowCapTokens": "14880000",
          "borrowDistributions": [
            {
              "apyPercentage": "0",
              "dailyDistributedTokens": "0",
              "token": {
                "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
                "asset": "/src/libs/tokens/img/lisUSD.png",
                "decimals": 18,
                "symbol": "lisUSD",
              },
              "type": "rewardDistributor",
            },
            {
              "apyPercentage": "0",
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "prime",
            },
          ],
          "borrowerCount": 20,
          "cashTokens": "11031000",
          "collateralFactor": 0.8,
          "disabledTokenActions": [],
          "exchangeRateVTokens": "0.999999999999545",
          "isCollateralOfUser": false,
          "liquidityCents": "1103058997.773",
          "reserveFactor": 0.1,
          "reserveTokens": "0",
          "supplierCount": 10,
          "supplyApyPercentage": "0",
          "supplyBalanceCents": "1103058997.77339989563532689599327223",
          "supplyBalanceTokens": "11031000.00000399910500000181",
          "supplyCapTokens": "18600000",
          "supplyDistributions": [
            {
              "apyPercentage": "0",
              "dailyDistributedTokens": "0",
              "token": {
                "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
                "asset": "/src/libs/tokens/img/lisUSD.png",
                "decimals": 18,
                "symbol": "lisUSD",
              },
              "type": "rewardDistributor",
            },
            {
              "apyPercentage": "0",
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "prime",
            },
          ],
          "tokenPriceCents": "99.996283",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "999962830000000",
          "userWalletBalanceTokens": "10000000000000",
          "vToken": {
            "address": "0x2197d02cC9cd1ad51317A0a85A656a0c82383A7c",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/libs/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
        {
          "borrowApyPercentage": "399.5548791715505",
          "borrowBalanceCents": "14020.2378315565440147153504",
          "borrowBalanceTokens": "0.267025220823379366",
          "borrowCapTokens": "56000",
          "borrowDistributions": [
            {
              "apyPercentage": "0",
              "dailyDistributedTokens": "0",
              "token": {
                "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
                "asset": "/src/libs/tokens/img/lisUSD.png",
                "decimals": 18,
                "symbol": "lisUSD",
              },
              "type": "rewardDistributor",
            },
          ],
          "borrowerCount": 20,
          "cashTokens": "0.000705300034659891",
          "collateralFactor": 0.45,
          "disabledTokenActions": [],
          "exchangeRateVTokens": "0.856077892298015039",
          "isCollateralOfUser": false,
          "liquidityCents": "37.0319859601477808269104",
          "reserveFactor": 0.25,
          "reserveTokens": "0",
          "supplierCount": 10,
          "supplyApyPercentage": "233.30903562118922",
          "supplyBalanceCents": "14057.269817516691795017207856",
          "supplyBalanceTokens": "0.26773052085803925699",
          "supplyCapTokens": "80000",
          "supplyDistributions": [
            {
              "apyPercentage": "0",
              "dailyDistributedTokens": "0",
              "token": {
                "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
                "asset": "/src/libs/tokens/img/lisUSD.png",
                "decimals": 18,
                "symbol": "lisUSD",
              },
              "type": "rewardDistributor",
            },
          ],
          "tokenPriceCents": "52505.2944",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "525052.944",
          "userWalletBalanceTokens": "10",
          "vToken": {
            "address": "0x231dED0Dfc99634e52EE1a1329586bc970d773b3",
            "decimals": 8,
            "symbol": "vWBNB",
            "underlyingToken": {
              "address": "0xae13d989daC2f0dEbFf460aC112a837C89BAa7cd",
              "asset": "/src/libs/tokens/img/wbnb.svg",
              "decimals": 18,
              "symbol": "WBNB",
            },
          },
        },
      ],
      "comptrollerAddress": "0x596B11acAACF03217287939f88d63b51d3771704",
      "description": "",
      "isIsolated": true,
      "name": "Liquid Staked BNB",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
    {
      "assets": [
        {
          "borrowApyPercentage": "0.011647930409597329",
          "borrowBalanceCents": "399.985132",
          "borrowBalanceTokens": "4",
          "borrowCapTokens": "900000",
          "borrowDistributions": [],
          "borrowerCount": 0,
          "cashTokens": "6006",
          "collateralFactor": 0.75,
          "disabledTokenActions": [],
          "exchangeRateVTokens": "1",
          "isCollateralOfUser": false,
          "liquidityCents": "600577.675698",
          "reserveFactor": 0.1,
          "reserveTokens": "0",
          "supplierCount": 0,
          "supplyApyPercentage": "0.000006975767097294",
          "supplyBalanceCents": "600977.66083",
          "supplyBalanceTokens": "6010",
          "supplyCapTokens": "1000000",
          "supplyDistributions": [],
          "tokenPriceCents": "99.996283",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "999962830000000",
          "userWalletBalanceTokens": "10000000000000",
          "vToken": {
            "address": "0x3AF2bE7AbEF0f840b196D99d79F4B803a5dB14a1",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/libs/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x92e8E3C202093A495e98C10f9fcaa5Abe288F74A",
      "description": "",
      "isIsolated": true,
      "name": "Meme",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
    {
      "assets": [
        {
          "borrowApyPercentage": "5.130421804803698",
          "borrowBalanceCents": "1030091.4588649133175062",
          "borrowBalanceTokens": "10300.914588649133175062",
          "borrowCapTokens": "200000",
          "borrowDistributions": [],
          "borrowerCount": 20,
          "cashTokens": "32569.640339677929523638",
          "collateralFactor": 0.65,
          "disabledTokenActions": [],
          "exchangeRateVTokens": "0.9930076443898276885",
          "isCollateralOfUser": false,
          "liquidityCents": "3256964.0339677929523638",
          "reserveFactor": 0.2,
          "reserveTokens": "0.000166728600388574",
          "supplierCount": 10,
          "supplyApyPercentage": "0.966416714921392",
          "supplyBalanceCents": "4287055.476159846231009819",
          "supplyBalanceTokens": "42870.55476159846231009819",
          "supplyCapTokens": "500000",
          "supplyDistributions": [],
          "tokenPriceCents": "100",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "1000",
          "userWalletBalanceTokens": "10",
          "vToken": {
            "address": "0x170d3b2da05cc2124334240fB34ad1359e34C562",
            "decimals": 8,
            "symbol": "vlisUSD",
            "underlyingToken": {
              "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
              "asset": "/src/libs/tokens/img/lisUSD.png",
              "decimals": 18,
              "symbol": "lisUSD",
            },
          },
        },
        {
          "borrowApyPercentage": "2.028626199218375",
          "borrowBalanceCents": "100461.088822525373",
          "borrowBalanceTokens": "1004.648231",
          "borrowCapTokens": "400000",
          "borrowDistributions": [
            {
              "apyPercentage": "0",
              "dailyDistributedTokens": "0",
              "token": {
                "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
                "asset": "/src/libs/tokens/img/lisUSD.png",
                "decimals": 18,
                "symbol": "lisUSD",
              },
              "type": "rewardDistributor",
            },
            {
              "apyPercentage": "0",
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "prime",
            },
          ],
          "borrowerCount": 20,
          "cashTokens": "998174.53518",
          "collateralFactor": 0.8,
          "disabledTokenActions": [],
          "exchangeRateVTokens": "0.99998934225265418908",
          "isCollateralOfUser": false,
          "liquidityCents": "99813743.30325273594",
          "reserveFactor": 0.1,
          "reserveTokens": "0.000002",
          "supplierCount": 10,
          "supplyApyPercentage": "0.001817450869823211",
          "supplyBalanceCents": "99914204.39187526542630629377313097",
          "supplyBalanceTokens": "999179.18340899996679182859",
          "supplyCapTokens": "1000000",
          "supplyDistributions": [
            {
              "apyPercentage": "0",
              "dailyDistributedTokens": "0",
              "token": {
                "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
                "asset": "/src/libs/tokens/img/lisUSD.png",
                "decimals": 18,
                "symbol": "lisUSD",
              },
              "type": "rewardDistributor",
            },
            {
              "apyPercentage": "0",
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "prime",
            },
          ],
          "tokenPriceCents": "99.996283",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "999962830000000",
          "userWalletBalanceTokens": "10000000000000",
          "vToken": {
            "address": "0x3338988d0beb4419Acb8fE624218754053362D06",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/libs/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x10b57706AD2345e590c2eA4DC02faef0d9f5b08B",
      "description": "",
      "isIsolated": true,
      "name": "Stablecoins",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
    {
      "assets": [
        {
          "borrowApyPercentage": "3.045326359470546",
          "borrowBalanceCents": "0",
          "borrowBalanceTokens": "0",
          "borrowCapTokens": "14880000",
          "borrowDistributions": [
            {
              "apyPercentage": "0",
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "prime",
            },
          ],
          "borrowerCount": 20,
          "cashTokens": "10000",
          "collateralFactor": 0.8,
          "disabledTokenActions": [],
          "exchangeRateVTokens": "1",
          "isCollateralOfUser": false,
          "liquidityCents": "999962.83",
          "reserveFactor": 0.1,
          "reserveTokens": "0",
          "supplierCount": 10,
          "supplyApyPercentage": "0",
          "supplyBalanceCents": "999962.83",
          "supplyBalanceTokens": "10000",
          "supplyCapTokens": "18600000",
          "supplyDistributions": [
            {
              "apyPercentage": "0",
              "token": {
                "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
                "asset": "/src/libs/tokens/img/usdt.svg",
                "decimals": 6,
                "symbol": "USDT",
              },
              "type": "prime",
            },
          ],
          "tokenPriceCents": "99.996283",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "999962830000000",
          "userWalletBalanceTokens": "10000000000000",
          "vToken": {
            "address": "0x712774CBFFCBD60e9825871CcEFF2F917442b2c3",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/libs/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x11537D023f489E4EF0C7157cc729C7B69CbE0c97",
      "description": "",
      "isIsolated": true,
      "name": "Tron",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
  ],
}
`;
